# Post-Install-Script

./: .gitignore  CheckHashes.ps1  DownloadRepo.ps1  InstallPythonRunFile.bat  InstallPythonRunFile.ps1  LICENSE  PostInstall.py  README.md  about.py  backend.py  check_remote_hash.py  config.json  gui.py  installpython.ps1  pyproject.toml
Obsidian/Praktikum/: readme.md
Obsidian/Praktikum/.obsidian/: workspace.json
Obsidian/Praktikum/Notes/: Ideen.md  Powershell für bootstraping.md  Powershell.md  Untitled.md
presets/: enterprise.json  performance.json
