[project]
name = "post-install-script"
version = "0.1.0"
description = "Automatisiertes Post-Install-Setup für Windows (Software-Deployment via winget/choco)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Tracker-Musik im About-Fenster: pip install -e ".[music]"
# Achtung: libxmplite gibt es nur als Quellcode, die Installation kompiliert
# C-Code und braucht die "Microsoft C++ Build Tools". Ohne das Extra spielt
# das About-Fenster ersatzweise eine PC-Speaker-Melodie — läuft also immer.
music = [
    "libxmplite",  # Tracker-Module (XM/MOD/IT/S3M) rendern
]
# Nur fürs Entwickeln, nicht fürs Ausführen: pip install -e ".[dev]"
dev = [
    "ruff",  # Linter + Formatter
    "pdoc",  # HTML-Doku aus den Docstrings generieren
]

[tool.setuptools]
# Flaches Skript-Projekt, kein Package: nur diese Module gehören zum Projekt
# (sonst rät setuptools und stolpert über Ordner wie Obsidian/ oder presets/)
py-modules = ["PostInstall", "gui", "backend", "about"]

[tool.ruff]
line-length = 100
target-version = "py311"
 
[tool.ruff.lint]
# Bewusst schlank gehalten, damit es noch Spaß macht:
# E/F = Basics (Syntaxfehler, unused imports/vars, offensichtliche Bugs)
# I   = Imports automatisch sortieren
select = ["E", "F", "I"]
ignore = [
    "E501",  # Zeilenlänge -> der Formatter kümmert sich darum, kein Lint-Ärger nötig
]
 
[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true